--- a/FowlerSite/appsettings.json
+++ b/FowlerSite/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=FowlerSiteDb;User ID=testuser;Password=sample;MultipleActiveResultSets=true"
+  }
 }
