tf-03. Add to cart functionality works as planned. Some minor things need to be fixed like pulling images from the database and properly displaying them in the cart.

--- a/FowlerSite/appsettings.json
+++ b/FowlerSite/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=FowlerSiteDb;User ID=testuser;Password=sample;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FowlerSiteDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
