Pushed the project to Azure. Now everyone works on the same database.

--- a/FowlerSite/FowlerSite.csproj
+++ b/FowlerSite/FowlerSite.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>925d90b7-ae6b-42ea-8f81-c566b20cd99a</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.18" />
