--- a/FowlerSite/appsettings.json
+++ b/FowlerSite/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FowlerSiteDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Server=tcp:fowlersitedbserver.database.windows.net,1433;Initial Catalog=FowlerSite_db;Persist Security Info=False;User ID=FowlerAdmin;Password=21ar14pr*_;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
   }
 }
