--- a/DataAccessLibrary/DataAccessLibrary.csproj
+++ b/DataAccessLibrary/DataAccessLibrary.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
+    <PackageReference Include="Stripe.net" Version="39.73.0" />
   </ItemGroup>
 
 </Project>
